[gd_scene load_steps=3 format=3 uid="uid://cte4mdsodi2m5"]

[ext_resource type="Theme" uid="uid://8bcavu88mft3" path="res://Themes/MainTheme.tres" id="1_h4yn7"]
[ext_resource type="Script" uid="uid://d4kye477soyb" path="res://Scenes/UI/LevelSelectPrompt.gd" id="1_qgdev"]

[node name="LevelSelectPrompt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_h4yn7")
script = ExtResource("1_qgdev")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203922, 0.203922, 0.203922, 0.623529)

[node name="PromptContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(350, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PromptContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="LevelSelector" type="OptionButton" parent="PromptContainer/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Street"
popup/item_1/text = "Rainy Street"
popup/item_1/id = 1
popup/item_2/text = "Cavern"
popup/item_2/id = 2
popup/item_3/text = "Spaceship"
popup/item_3/id = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PromptContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="PromptContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="PlayButton" type="Button" parent="PromptContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play"

[connection signal="item_selected" from="PromptContainer/VBoxContainer/LevelSelector" to="." method="_on_menu_button_item_selected"]
[connection signal="pressed" from="PromptContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PromptContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
